--- a/assets/css/miniport.css
+++ b/assets/css/miniport.css
@@ -1661,19 +1661,19 @@ body, input, textarea, select {
   margin-bottom: 0;
 }
 .miniport-container #top {
-  padding: 10em 0 10em 0;
+  padding: 7em 0 7em 0;
   text-align: left;
 }
 .miniport-container #top .image {
-  width: 20em;
-  height: 20em;
+  width: 100%;
   margin: 0;
 }
 .miniport-container #top h1 {
   margin-top: 0.35em;
+  font-size:1.6em;
 }
 .miniport-container #top p {
-  font-size: 1.5em;
+  font-size: 1.2em;
   line-height: 1.75em;
 }
 .miniport-container #top p a {
