--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2077,13 +2077,14 @@ justify-content: center;
 }
 
 .poptrox-popup iframe {
-	z-index: 0!important;
+	z-index: 1!important;
 }
 
 .poptrox-popup .caption {
 	top:0;
 	height:150px;
 	opacity:0;
+	font-weight:bold;
 	background-image: -moz-linear-gradient(
     to bottom,
     rgba(16, 16, 16, 0.9) 25%,
